--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
+@import "node_modules/bootswatch/dist/slate/_variables.scss";
+@import "~bootstrap/scss/bootstrap";
+@import "node_modules/bootswatch/dist/slate/_bootswatch.scss";
